--- a/demo/BBSSDKdemo/project.properties
+++ b/demo/BBSSDKdemo/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=libs/appcompat_v7
-android.library.reference.2=../../../byrbbsjdkcore
+android.library.reference.1=libs\\appcompat_v7
+android.library.reference.2=../../bbsSDKCore
