--- a/BBSSDKDemo/build.gradle
+++ b/BBSSDKDemo/build.gradle
@@ -31,5 +31,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com..support:appcompat-v7:22.0.0'
     compile project(':BBSSDK')
 }
