--- a/BBSSDK/src/main/AndroidManifest.xml
+++ b/BBSSDK/src/main/AndroidManifest.xml
@@ -2,11 +2,6 @@
     package="cn.byr.bbs.sdk">
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme">
-
-    </application>
+        android:allowBackup="true"></application>
 
 </manifest>
